tests/should_fail/syntax_unresolved_forward_decl.nv
module main

// SHOULD FAIL: forward declaration never resolved
// parser: "forward declarations not resolved" at EOF
fn foo(x: Int) -> Int
